# GameEngineFromScratch

./: .gitignore  CMakeLists.txt  main.c
Framework/Common/: BaseApplication.hpp  GraphicsManager.hpp  main.cpp
Platform/Linux/: helloengine_xcb.c
Platform/Windows/: helloengine_d2d.cpp  helloengine_d3d.cpp  helloengine_win.c
